# funathon-project1

./: .gitignore  1-preprocessing.qmd  2-GB_model.qmd  2-RF_model.qmd  3-metrics.qmd  4-logging.qmd  5-deployment.qmd  README.md  _quarto.yaml  doc_projet.qmd  index.qmd  pyproject.toml
.github/workflows/: dev.yaml  publish.yaml
intermediate_solutions/: 2_preprocessing.py  2a_GB.py  3_GB.py  3_RF.py  4_metrics.py
intermediate_solutions/solution_step1/: main.py
intermediate_solutions/solution_step1_to_2/: main.py
intermediate_solutions/solution_step1_to_3/: main.py
solution/: main.py  preprocess.py
solution/admin/: extract.sh  extract_all.sh  save_models.py
starting_point/: main.py  my_functions.py  preprocessing.py
subject/: 1-intro_data.qmd  2-GB_model.qmd  2-preprocessing.qmd  3-GB_model.qmd  3-RF_model.qmd  4-metrics.qmd  5-logging.qmd  6-deployment.qmd  introduction.qmd
temp/: replace_terms.sh  replacements.json  table_dict.Qmd  table_dict.qmd  temp.py
